--- a/res/color/tab_text_color.xml
+++ b/res/color/tab_text_color.xml
@@ -1,5 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-  <item android:color="@color/text_tab_selected" android:state_selected="true"/>
-  <item android:color="@color/text_tab_unselected" />
+    <!-- Non focused states -->
+    <item android:state_focused="false" android:state_selected="false" android:state_pressed="false" android:color="@color/mega" />
+    <item android:state_focused="false" android:state_selected="true"  android:state_pressed="false" android:color="@color/mega" />
+
+    <!-- Focused states -->
+    <item android:state_focused="true" android:state_selected="false" android:state_pressed="false" android:color="@color/mega" />
+    <item android:state_focused="true" android:state_selected="true"  android:state_pressed="false" android:color="@color/mega" />
+
+    <!-- Pressed -->
+    <!--    Non focused states -->
+    <item android:state_focused="false" android:state_selected="false" android:state_pressed="true" android:color="@color/white" />
+    <item android:state_focused="false" android:state_selected="true"  android:state_pressed="true" android:color="@color/white" />
+
+    <!--    Focused states -->
+    <item android:state_focused="true" android:state_selected="false" android:state_pressed="true" android:color="@color/mega" />
+    <item android:state_focused="true" android:state_selected="true"  android:state_pressed="true" android:color="@color/mega" />
 </selector>
+  
+  
+  
+  
+  
+
