--- a/res/drawable/tab_pressed.xml
+++ b/res/drawable/tab_pressed.xml
@@ -3,7 +3,7 @@
     <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 <item android:top="-15dp">
       <shape android:shape="rectangle">
-            <solid android:color="@color/black" />
+            <solid android:color="@color/tab_pressed" />
         </shape>
    </item>
    <item android:top="-3dp" android:bottom="0dp" android:left="-3dp" android:right="-3dp"> 
@@ -13,8 +13,8 @@
                    android:top="10dp"
                 android:right="10dp"
                 android:bottom="15dp" />
-            <stroke android:width="2dp" android:color="#FF00ccff" />
-            <solid android:color="#00000000" />
+            <stroke android:width="2dp" android:color="@color/tab_pressed" />
+            <solid android:color="@color/tab_pressed" />
         </shape>
    </item>
 </layer-list>
