--- a/res/layout-v21/activity_manager.xml
+++ b/res/layout-v21/activity_manager.xml
@@ -154,7 +154,8 @@
          app:itemIconTint="@color/drawer_item_text"
          app:menu="@menu/navigation_drawer_items"
          android:paddingBottom="96dp"
-         android:clipToPadding="false" >
+         android:clipToPadding="false"
+         app:itemBackground="@drawable/navigation_view_item_background" >
 	    
          
          <RelativeLayout
