Bug #3158 - Switch (save for offline) track is not properly painted in the "OFF" state
Finally it was as easy as changing the style of the activity
....... :(

--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -57,7 +57,7 @@
         
     </style>
     
-    <style name="Theme.Megaactionbar.Properties" parent="Theme.AppCompat.NoActionBar">
+    <style name="Theme.Megaactionbar.Properties" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
  
         <!-- colorPrimary is used for the default action bar background -->
