--- a/res/layout-v21/fragment_offlinegrid.xml
+++ b/res/layout-v21/fragment_offlinegrid.xml
@@ -5,17 +5,27 @@
     android:background="@color/fragment_background"
     tools:context=".OfflineFragment" >
 
-    <TextView
-        android:id="@+id/offline_content_text_grid"
+  	<RelativeLayout
+        android:id="@+id/offline_content_grid_text_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@color/content_text_folder"
-        android:paddingBottom="3dp"
-        android:paddingLeft="8dp"
-        android:paddingTop="3dp"
-        android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:background="@color/content_text_background">
 
+        <TextView
+            android:id="@+id/offline_content_text_grid"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"            
+            android:textColor="@color/text_secondary"
+            android:textSize="14sp" />
+    </RelativeLayout>
+    
+  	<View
+        android:id="@+id/separator_grid"
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:layout_below="@id/offline_content_grid_text_layout"
+        android:background="@color/delimiterColor" />
+    
     <LinearLayout
         android:id="@+id/offline_out_space_grid"
         android:layout_width="fill_parent"
@@ -54,7 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" 
         android:choiceMode="multipleChoice"
-        android:layout_below="@id/offline_content_text_grid"
+        android:layout_below="@id/separator_grid"
         android:columnWidth="172dp"/>
     
     <ImageView
