--- a/res/layout-v21/fragment_offlinelist.xml
+++ b/res/layout-v21/fragment_offlinelist.xml
@@ -4,17 +4,27 @@
     android:layout_height="match_parent"
     android:background="@color/fragment_background"
     tools:context=".OfflineFragment" >
-
-    <TextView
-        android:id="@+id/offline_content_text"
+    
+    <RelativeLayout
+        android:id="@+id/offline_content_text_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@color/content_text_folder"
-        android:paddingBottom="3dp"
-        android:paddingLeft="8dp"
-        android:paddingTop="3dp"
-        android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:background="@color/content_text_background">
+
+        <TextView
+            android:id="@+id/offline_content_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"            
+            android:textColor="@color/text_secondary"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/separator"
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:layout_below="@id/offline_content_text_layout"
+        android:background="@color/delimiterColor" />
 
     <LinearLayout
         android:id="@+id/offline_out_space"
@@ -53,7 +63,7 @@
         android:id="@+id/offline_view_browser"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/offline_content_text"
+        android:layout_below="@id/separator"
         android:choiceMode="multipleChoice" />
 
     <ImageView
