--- a/res/layout-v21/item_offline_list.xml
+++ b/res/layout-v21/item_offline_list.xml
@@ -19,6 +19,7 @@
         android:layout_toRightOf="@id/offline_list_thumbnail"
         android:paddingLeft="3dp"
         android:paddingTop="7dp"
+        android:textColor="@color/file_list_first_row"
         android:singleLine="false" />
     
     <TextView
