--- a/res/layout-v21/fragment_rubbishbingrid.xml
+++ b/res/layout-v21/fragment_rubbishbingrid.xml
@@ -4,17 +4,35 @@
     android:layout_height="match_parent"
     android:background="@color/fragment_background"
     tools:context=".RubbishBinFragmentLollipop" >
-   
-    <TextView
-	    android:id="@+id/rubbishbin_grid_content_text"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:paddingLeft="8dp"
-	    android:paddingTop="3dp"
-	    android:paddingBottom="3dp"
-	    android:textColor="@color/white"
-	    android:background="@color/content_text_folder"
-	    android:textSize="14sp"/>
+    
+   <RelativeLayout
+        android:id="@+id/rubbishbin_grid_content_text_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/content_text_background">
+
+        <TextView
+            android:id="@+id/rubbishbin_grid_content_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"            
+            android:textColor="@color/text_secondary"
+            android:textSize="14sp" />
+        
+       <ProgressBar
+		    android:id="@+id/rubbishbin_grid_download_progress_bar"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" 
+			android:layout_below="@id/rubbishbin_grid_content_text" 
+			style="@style/UsedSpaceProgressBar"
+			android:visibility="gone"/>
+    </RelativeLayout>
+    
+   <View
+        android:id="@+id/separator_grid"
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:layout_below="@id/rubbishbin_grid_content_text_layout"
+        android:background="@color/delimiterColor" />
     
     <LinearLayout
          android:id="@+id/out_space_rubbish_grid"
@@ -54,7 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:choiceMode="multipleChoice" 
-		android:layout_below="@id/rubbishbin_grid_content_text"
+		android:layout_below="@id/separator_grid"
 		android:columnWidth="172dp" />
     
     <ImageView
