--- a/res/layout-v21/fragment_inboxgrid.xml
+++ b/res/layout-v21/fragment_inboxgrid.xml
@@ -5,21 +5,41 @@
     tools:context=".InboxFragment"
 	android:background="@color/fragment_background">
     
-    <TextView
-	    android:id="@+id/inbox_content_grid_text"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:paddingLeft="8dp"
-	    android:textColor="@color/black"
-	    android:background="@color/content_text_folder"
-	    android:textSize="14sp"/>
+    <RelativeLayout
+        android:id="@+id/inbox_grid_content_text_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/content_text_background">
+
+        <TextView
+            android:id="@+id/inbox_content_grid_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"            
+            android:textColor="@color/text_secondary"
+            android:textSize="14sp" />
+        
+       <ProgressBar
+		    android:id="@+id/inbox_grid_download_progress_bar"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" 
+			android:layout_below="@id/inbox_content_grid_text" 
+			style="@style/UsedSpaceProgressBar"
+			android:visibility="gone"/>
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/separator_grid"
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:layout_below="@id/inbox_grid_content_text_layout"
+        android:background="@color/delimiterColor" />  
     
     <mega.privacy.android.app.components.AutofitRecyclerView
         android:id="@+id/inbox_grid_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:choiceMode="multipleChoice" 
-		android:layout_below="@id/inbox_content_grid_text"
+		android:layout_below="@id/separator_grid"
 		android:columnWidth="172dp" />
     
     <ImageView
