Task #3195 - Add new Downloading Notification in Shared Items and Inbox section

--- a/res/layout-v21/fragment_filebrowserlist.xml
+++ b/res/layout-v21/fragment_filebrowserlist.xml
@@ -16,7 +16,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"            
             android:textColor="@color/text_secondary"
-            android:textSize="14sp" />
+            android:textSize="14sp" />   
         
        <ProgressBar
 		    android:id="@+id/file_list_download_progress_bar"
@@ -25,6 +25,15 @@
 			android:layout_below="@id/content_text" 
 			style="@style/UsedSpaceProgressBar"
 			android:visibility="gone"/>
+       
+       <ImageView
+	        android:id="@+id/file_list_transfer_arrow"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:src="@drawable/ic_chevron_right_grey"
+	        android:layout_above="@id/file_list_download_progress_bar" 
+	        android:layout_alignParentRight="true" 
+	        android:visibility="gone"/>     
     </RelativeLayout>
 
     <View
