--- a/res/layout-v21/fragment_filebrowsergrid.xml
+++ b/res/layout-v21/fragment_filebrowsergrid.xml
@@ -25,6 +25,15 @@
 			android:layout_below="@id/content_grid_text" 
 			style="@style/UsedSpaceProgressBar"
 			android:visibility="gone"/>
+       
+      <ImageView
+	        android:id="@+id/file_grid_transfer_arrow"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:src="@drawable/ic_chevron_right_grey"
+	        android:layout_above="@id/file_grid_download_progress_bar" 
+	        android:layout_alignParentRight="true" 
+	        android:visibility="gone"/>  
     </RelativeLayout>
 
     <View
