--- a/res/layout-v21/item_transfers_list.xml
+++ b/res/layout-v21/item_transfers_list.xml
@@ -68,9 +68,7 @@
         android:paddingLeft="5dp"
         android:paddingBottom="7dp"
         android:textColor="@color/file_list_second_row" />
-    
-
-     
+         
     <ProgressBar
 	    android:id="@+id/transfers_list_bar"
 		android:layout_width="fill_parent"
@@ -85,12 +83,10 @@
         android:id="@+id/transfers_list_option_remove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_clear_black"
+        android:src="@drawable/ic_close_grey"
 		android:background="@null" 
-        android:layout_alignTop="@id/transfers_list_filename"
-        android:layout_alignParentRight="true"
-		android:paddingTop="12dp"
-        android:paddingRight="15dp" />
+		android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"/>
             
 </RelativeLayout>
 
