--- a/res/layout-v21/fragment_filebrowsergrid.xml
+++ b/res/layout-v21/fragment_filebrowsergrid.xml
@@ -4,36 +4,36 @@
     android:layout_height="match_parent"
     android:background="@color/fragment_background"
     tools:context=".FileBrowserGridFragment" >
-    
-   <RelativeLayout
+
+    <RelativeLayout
         android:id="@+id/content_grid_text_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@color/content_text_background">
+        android:background="@color/content_text_background" >
 
         <TextView
             android:id="@+id/content_grid_text"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"            
+            android:layout_height="wrap_content"
             android:textColor="@color/text_secondary"
             android:textSize="14sp" />
-        
-       <ProgressBar
-		    android:id="@+id/file_grid_download_progress_bar"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content" 
-			android:layout_below="@id/content_grid_text" 
-			style="@style/UsedSpaceProgressBar"
-			android:visibility="gone"/>
-       
-      <ImageView
-	        android:id="@+id/file_grid_transfer_arrow"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:src="@drawable/ic_chevron_right_grey"
-	        android:layout_above="@id/file_grid_download_progress_bar" 
-	        android:layout_alignParentRight="true" 
-	        android:visibility="gone"/>  
+
+        <ProgressBar
+            android:id="@+id/file_grid_download_progress_bar"
+            style="@style/UsedSpaceProgressBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/content_grid_text"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/file_grid_transfer_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/file_grid_download_progress_bar"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_chevron_right_grey"
+            android:visibility="gone" />
     </RelativeLayout>
 
     <View
@@ -41,7 +41,7 @@
         android:layout_width="fill_parent"
         android:layout_height="1dip"
         android:layout_below="@id/content_grid_text_layout"
-        android:background="@color/delimiterColor" />    
+        android:background="@color/delimiterColor" />
 
     <ImageView
         android:id="@+id/file_grid_empty_image"
@@ -94,58 +94,6 @@
             android:textColor="@color/button_text" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/get_pro_account_grid"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center|fill_horizontal"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/get_pro_account_text_grid"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/navigation_drawer_background"
-            android:gravity="center"
-            android:paddingBottom="20dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="20dp"
-            android:text="@string/get_pro_account"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <LinearLayout
-            android:id="@+id/get_pro_account_buttons_layout_grid"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="center|fill_horizontal"
-            android:orientation="horizontal" >
-
-            <Button
-                android:id="@+id/btnLeft_cancel_grid"
-                android:layout_width="fill_parent"
-                android:layout_height="48dp"
-                android:layout_weight="1"
-                android:background="@drawable/grey_btn_default_holo_light"
-                android:text="@string/general_cancel"
-                android:textColor="@color/button_text" />
-
-            <Button
-                android:id="@+id/btnRight_upgrade_grid"
-                android:layout_width="fill_parent"
-                android:layout_height="48dp"
-                android:layout_weight="1"
-                android:background="@drawable/btn_default_holo_light_without_corners"
-                android:text="@string/my_account_upgrade_pro"
-                android:textColor="@color/button_text" />
-        </LinearLayout>
-    </LinearLayout>
-
     <mega.privacy.android.app.components.AutofitRecyclerView
         android:id="@+id/file_grid_view_browser"
         android:layout_width="match_parent"
@@ -170,9 +118,9 @@
 
     <TextView
         android:id="@+id/file_grid_browser_camera_upload_on_off"
-        android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/accentColor"
@@ -586,8 +534,8 @@
             </LinearLayout>
         </LinearLayout>
     </mega.privacy.android.app.components.SlidingUpPanelLayout>
-    
-   <mega.privacy.android.app.components.SlidingUpPanelLayout
+
+    <mega.privacy.android.app.components.SlidingUpPanelLayout
         xmlns:sothree="http://schemas.android.com/apk/res-auto"
         android:id="@+id/sliding_layout_grid_upload"
         android:layout_width="match_parent"
@@ -627,7 +575,7 @@
             android:background="@color/white"
             android:orientation="vertical"
             android:padding="0dp" >
-            
+
             <LinearLayout
                 android:id="@+id/file_grid_upload_title_layout"
                 android:layout_width="match_parent"
@@ -767,8 +715,14 @@
                     android:textSize="14sp"
                     android:textStyle="bold" />
             </LinearLayout>
-
         </LinearLayout>
     </mega.privacy.android.app.components.SlidingUpPanelLayout>
+
+    <include
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        layout="@layout/layout_get_pro_account"
+        android:visibility="gone" />
 
 </RelativeLayout>
