--- a/res/layout-v21/activity_file_properties.xml
+++ b/res/layout-v21/activity_file_properties.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/file_properties_complete_relative_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent" >
 	
