--- a/res/layout-v21/activity_filestorage.xml
+++ b/res/layout-v21/activity_filestorage.xml
@@ -59,6 +59,24 @@
             android:textSize="14sp" />
     </LinearLayout>
     
+   <ImageView
+        android:id="@+id/file_storage_empty_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:gravity="center_horizontal" />
+
+    <TextView
+        android:id="@+id/file_storage_empty_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/file_storage_empty_image"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/standard_margin"
+        android:textColor="@color/text_secondary"
+        android:textSize="16sp" />
+    
    <android.support.v7.widget.RecyclerView
         android:id="@+id/file_storage_list_view"
         android:layout_width="match_parent"
