--- a/res/layout-v21/activity_folder_link.xml
+++ b/res/layout-v21/activity_folder_link.xml
@@ -46,34 +46,7 @@
         android:layout_marginTop="@dimen/standard_margin"
         android:textColor="@color/text_secondary"
         android:textSize="16sp" />
-
-    <LinearLayout
-        android:id="@+id/buttons_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center|fill_horizontal"
-        android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/btnLeft_new"
-            android:layout_width="fill_parent"
-            android:layout_height="48dp"
-            android:layout_weight="1"
-            android:background="@drawable/grey_btn_default_holo_light"
-            android:text="@string/menu_new_folder"
-            android:textColor="@color/button_text" />
-
-        <Button
-            android:id="@+id/btnRight_upload"
-            android:layout_width="fill_parent"
-            android:layout_height="48dp"
-            android:layout_weight="1"
-            android:background="@drawable/btn_default_holo_light_without_corners"
-            android:text="@string/general_upload"
-            android:textColor="@color/button_text" />
-    </LinearLayout>
-    
+   
     <LinearLayout
         android:id="@+id/options_folder_link_layout"
         android:layout_width="fill_parent"
@@ -82,6 +55,15 @@
         android:gravity="right"
         android:background="@color/white"
         android:orientation="horizontal" >
+        
+       <TextView
+            android:id="@+id/folder_link_cancel_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@color/accentColor"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/folder_link_button_download"
