Bug #3240 - SnackBar in PinLockActivity is shown below the actionBar

--- a/res/layout-v21/activity_pin_lock.xml
+++ b/res/layout-v21/activity_pin_lock.xml
@@ -10,6 +10,15 @@
     android:windowSoftInputMode="stateVisible"
     tools:context=".PinLockActivityLollipop" >
 
+    <android.support.design.widget.CoordinatorLayout
+    android:layout_width="match_parent"
+    android:layout_height="70dp"
+    android:id="@+id/myCoordinatorLayout"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true">
+	</android.support.design.widget.CoordinatorLayout>
+    
     <TextView
         android:id="@+id/unlock_text_view"
         android:layout_width="wrap_content"
