Task #3241 and #3244: - Select multiple contacts and send file to them - Send multiple files (multiselection in FileBrowserFragment)

--- a/res/menu/contact_fragment_action.xml
+++ b/res/menu/contact_fragment_action.xml
@@ -30,6 +30,13 @@
         MEGA:showAsAction="never" />
     
     <item
+        android:id="@+id/cab_menu_send_file"
+        android:orderInCategory="115"
+        android:title="@string/context_send_file"
+        android:showAsAction="never"
+        MEGA:showAsAction="never" />
+    
+    <item
         android:id="@+id/cab_menu_help"
         android:orderInCategory="115"
         android:title="@string/action_help"
