--- a/res/menu/file_browser_action.xml
+++ b/res/menu/file_browser_action.xml
@@ -32,6 +32,14 @@
         android:visible="false"
         MEGA:showAsAction="never" />
     
+   <item
+        android:id="@+id/cab_menu_send_file"
+        android:orderInCategory="105"
+        android:showAsAction="never"
+        android:title="@string/file_properties_send_file_select_contact"
+        android:visible="false"
+        MEGA:showAsAction="never" />
+    
     <item
         android:id="@+id/cab_menu_rename"
         android:icon="@drawable/ic_menu_rename_dark"
