--- a/res/layout-v21/fragment_contact_properties.xml
+++ b/res/layout-v21/fragment_contact_properties.xml
@@ -1,167 +1,175 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:rounded="http://schemas.android.com/apk/res-auto"
-    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
-    tools:context=".ContactPropertiesFragment" >
+    android:id="@+id/contact_properties_complete_relative_layout"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent" >
 
-    <!--
-    <RelativeLayout 
-        android:layout_width="fill_parent"
-        android:layout_height="48dp"
-        android:id="@+id/contact_properties_layout_top"
-        android:background="#44000000"
-        android:layout_alignParentTop="true">
-        
-        <ImageView 
-            android:id="@+id/contact_properties_close_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_navigation_accept_white"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"
-            style="@style/dialogActionButton"/>
-        
-        <ImageView 
-            android:id="@+id/contact_properties_overflow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_core_overflow"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="5dp"
-            style="@style/dialogActionButton"/>
-     
-    </RelativeLayout>
-    -->
 
-<!--     <RelativeLayout
-        android:id="@+id/contact_image_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <mega.privacy.android.app.android.utils.FixedCenterCrop
-            android:id="@+id/contact_properties_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop" />
-
-        <TextView
-            android:id="@+id/contact_properties_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/contact_properties_image"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-    </RelativeLayout>
--->
-    <!--
-    	<TextView
-            android:id="@+id/contact_properties_initial_letter"
-            android:layout_width="fill_parent"
-   			android:layout_height="fill_parent"
-			android:gravity="center_horizontal|center_vertical"
-   			android:paddingBottom="5dp" />
+	<com.nirhart.parallaxscroll.views.ParallaxScrollView 
+	    xmlns:app="http://schemas.android.com/apk/res-auto"
+	    android:id="@+id/contact_properties_scroll_view"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    app:parallax_factor="1.9"
+	    tools:context=".ManagerActivity" 
+	    android:background="@color/white">
 	    
-	    <ImageView
-	        android:id="@+id/contact_properties_image"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-	        android:layout_centerHorizontal="true"
-	        android:paddingBottom="10dp"
-	        android:paddingLeft="30dp"
-	        android:paddingRight="30dp"
-	        android:paddingTop="10dp"/>
-    -->
+	    <RelativeLayout
+	        android:id="@+id/contact_properties_main_layout"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="vertical">
+	        
+	        <RelativeLayout
+	            android:id="@+id/contact_properties_image_layout"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:fitsSystemWindows="true" 
+	            android:layout_alignParentTop="true">
+	
+                <RelativeLayout
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content"
+		            android:fitsSystemWindows="true"
+		            app:layout_collapseMode="parallax"
+		            android:background="@color/lollipop_primary_color" >
+		            
+	                <TextView
+			            android:id="@+id/contact_properties_toolbar_initial_letter"
+			            android:layout_width="wrap_content"
+			   			android:layout_height="wrap_content"
+			   			android:layout_centerInParent="true"
+			   			android:paddingBottom="5dp" />
+		
+		            <ImageView
+		                android:id="@+id/contact_properties_toolbar_image"
+		                android:layout_width="match_parent"
+		                android:layout_height="wrap_content"
+		                android:adjustViewBounds="true"
+		                android:scaleType="fitCenter" />
+		        </RelativeLayout>
+	
+	        </RelativeLayout>
+	        
+	        <LinearLayout
+		        android:id="@+id/contact_properties_email_layout"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:background="@color/white"
+		        android:gravity="left"
+		        android:orientation="horizontal" 
+		        android:layout_below="@id/contact_properties_image_layout">
+		
+		        <ImageView
+		            android:id="@+id/contact_properties_email_icon"
+		            style="@style/dialogActionButton"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_share" />
+		
+		        <LinearLayout
+		            android:id="@+id/contact_properties_email_text_layout"
+		            android:layout_width="fill_parent"
+		            android:layout_height="wrap_content"
+		            android:background="@color/white"
+		            android:gravity="left"
+		            android:orientation="vertical" >
+		
+		            <TextView
+		                android:id="@+id/contact_properties_email_label"
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:text="@string/email_text"
+		                android:textColor="@color/file_properties_info_menu"
+		                android:textStyle="bold" />
+		
+		            <TextView
+		                android:id="@+id/contact_properties_email"
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:textColor="@color/file_properties_info_menu" />
+		        </LinearLayout>
+		    </LinearLayout>
+		
+		    <LinearLayout
+		        android:id="@+id/contact_properties_shared_folders_layout"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:background="@color/white"
+		        android:gravity="left"
+		        android:orientation="horizontal"
+		        android:layout_below="@id/contact_properties_email_layout" >
+		
+		        <ImageView
+		            android:id="@+id/contact_properties_shared_folder_icon"
+		            style="@style/dialogActionButton"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_share" />
+		
+		        <TextView
+		            android:id="@+id/contact_properties_shared_folders_label"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_gravity="center_horizontal"
+		            android:text="@string/section_shared_items"
+		            android:textColor="@color/file_properties_info_menu"
+		            android:textStyle="bold" />
+		
+		        <TextView
+		            android:id="@+id/contact_properties_shared_folders_button"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_gravity="center_horizontal"
+		            android:gravity="left"
+		            android:textColor="@color/accentColor" />
+		    </LinearLayout>
+	        
+		</RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/contact_email_layout"
-        android:layout_width="fill_parent"
+	</com.nirhart.parallaxscroll.views.ParallaxScrollView>
+	
+	<RelativeLayout
+        android:id="@+id/contact_properties_toolbar_layout" 
         android:layout_height="wrap_content"
-        android:background="@color/orange"
-        android:gravity="left"
-        android:orientation="horizontal" >
-
-        <ImageView
-            android:id="@+id/contact_email_icon"
-            style="@style/dialogActionButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_share" />
-
-        <LinearLayout
-            android:id="@+id/email_text_layout"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/orange"
-            android:gravity="left"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/email_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/email_text"
-                android:textColor="@color/file_properties_info_menu"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/contact_properties_email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/file_properties_info_menu" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/shared_folders_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/orange"
-        android:gravity="left"
-        android:orientation="horizontal" >
-
-        <ImageView
-            android:id="@+id/shared_folder_icon"
-            style="@style/dialogActionButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_share" />
-
-        <TextView
-            android:id="@+id/shared_folders_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/section_shared_items"
-            android:textColor="@color/file_properties_info_menu"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/shared_folders_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="left"
-            android:textColor="@color/accentColor" />
-    </LinearLayout>
-
-    <!--
-   <RelativeLayout  
-			android:layout_width="200dp"
-			android:layout_height="wrap_content"
-			android:id="@+id/contact_properties_overflow_menu"
-			android:background="#ffffffff"
-	        android:layout_alignParentRight="true"
-	        android:layout_below="@+id/contact_properties_layout_top"
-	        android:layout_marginRight="5dp">
-        
+        android:layout_width="match_parent"
+        android:background="@drawable/gradient_shape"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true">
+	    <RelativeLayout
+	           android:id="@+id/contact_properties_toolbar_back_options_layout"
+	           android:layout_width="match_parent"
+	           android:layout_height="56dp" >
+	       
+		    <ImageView 
+		        android:id="@+id/contact_properties_toolbar_back"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:src="@drawable/ic_arrow_back_white"
+		        android:layout_alignParentLeft="true"
+		        android:layout_centerVertical="true"
+		        style="@style/dialogActionButton" />
+		    
+		    <ImageView 
+		        android:id="@+id/contact_properties_toolbar_overflow"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:src="@drawable/ic_dots_vertical_white"
+		        android:layout_alignParentRight="true"
+		        android:layout_centerVertical="true"
+		        style="@style/dialogActionButton" />
+	    </RelativeLayout>
+	</RelativeLayout>
+	
+    <RelativeLayout  
+		android:layout_width="200dp"
+		android:layout_height="wrap_content"
+		android:id="@+id/contact_properties_overflow_menu_layout"
+		android:background="#ffffffff"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp">
+       
         <ListView
             android:id="@+id/contact_properties_overflow_menu_list"
             android:layout_width="wrap_content"
@@ -169,8 +177,6 @@
             android:layout_alignParentLeft="true"
 			android:layout_marginLeft="0dp"
 			android:background="#00000000"
-			/>            
-	</RelativeLayout>
-    -->
-
-</LinearLayout>
+			android:divider="@null" />
+    </RelativeLayout>
+</RelativeLayout>
