Bug #3270 - Enter key not working in Alert Dialogs

--- a/res/layout-v21/fragment_fileexplorerlist.xml
+++ b/res/layout-v21/fragment_fileexplorerlist.xml
@@ -102,7 +102,7 @@
      
     <View 
      android:id="@+id/separator" 
-	 android:background="@color/text_secondary"
+	 android:background="@color/separator_grey"
 	 android:layout_width = "fill_parent"
 	 android:layout_height="1dip"
 	 android:layout_above="@id/options_explorer_layout"/>
