--- a/res/layout-v21/activity_filestorage.xml
+++ b/res/layout-v21/activity_filestorage.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/white"
-    android:orientation="vertical"
     android:id="@+id/file_storage_container"
     tools:context=".FileStorageActivityLollipop" >
 
@@ -20,7 +19,7 @@
    
     <TextView
 	    android:id="@+id/file_storage_content_text"
-	    android:layout_width="fill_parent"
+	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:ellipsize="start"
 	    android:paddingLeft="8dp"
@@ -33,7 +32,7 @@
     
     <LinearLayout
         android:id="@+id/options_file_storage_layout"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="right"
@@ -87,7 +86,7 @@
 
     <View
         android:id="@+id/separator_3"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="1dip"
         android:layout_above="@id/options_file_storage_layout"
         android:background="@color/separator_grey" />
