Feature #3290 - Grid view Search Fragment

--- a/res/layout-v21/fragment_filebrowsergrid.xml
+++ b/res/layout-v21/fragment_filebrowsergrid.xml
@@ -508,6 +508,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="bottom"
+        android:visibility="gone"
         sothree:umanoDragView="@+id/dragView"
         sothree:umanoOverlay="true"
         sothree:umanoPanelHeight="100dp"
